--- a/src/public/feed.html
+++ b/src/public/feed.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/feed.css">
+    <link type="text/css" rel="stylesheet" href="/bootstrap.css">
     <title>Feed</title>
 </head>
 <body>
     <h1>Feed de local trader</h1>
     <a href="/signin">Registro</a>
+    <script src="/bootstrap.bundle.js"></script>
 </body>
 </html>
