--- a/src/public/signinForm.html
+++ b/src/public/signinForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="signinForm.css">
+    <link type="text/css" rel="stylesheet" href="/bootstrap.css">
     <title>Local Trader</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
         <input type="text" name="tipo_usuario" placeholder="Tipo de usuario">
         <input type="text" name="username" placeholder="Username">
         <input type="text" name="pass" placeholder="Password">
-        <button type="submit"></button>
+        <button type="submit">Subir datos</button>
     </form>
 </body>
 </html>
