Se ha implementado la forma de usar archivos estáticos junto con bootstrap

--- a/src/public/signinFailed.html
+++ b/src/public/signinFailed.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="bootstrap.css">
-    <title>Feed</title>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="bootstrap.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>Feed de local trader</h1>
-    <a href="/signin">Registro</a>
-    <script src="./bootstrap.bundle.js"></script>
+    <h1>No se ha podido registrar</h1>
+    <script src="bootstrap.bundle.js"></script>
 </body>
 </html>
