--- a/src/public/signinForm.html
+++ b/src/public/signinForm.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
     <title>Local Trader</title>
 </head>
 
 <body>
-    
+
     <!-- <p>Feed cargado</p> -->
     <div class="container bg-red d-flex flex-column p-5">
         <h1 class="align-self-center">Registro de usuario</h1>
@@ -37,7 +37,7 @@
                     <option selected>Estudiante</option>
                     <option value="1">Vendedor</option>
                     <!-- <option value="3">Three</option> -->
-                  </select>
+                </select>
             </div>
             <div class="mb-3">
                 <label for="username" class="form-label">Nombre de usuario</label>
@@ -54,16 +54,7 @@
             <input type="password" class="form-control" id="pass_confirmation" placeholder="Repetir contrasena">
         </div> -->
     </div>
-    <!-- <form action="/signin" method="post">
-        <input type="text" name="n_control" placeholder="Número de control">
-        <input type="text" name="nombre" placeholder="Nombre">
-        <input type="text" name="telefono" placeholder="Telefono">
-        <input type="text" name="email" placeholder="Email">
-        <input type="text" name="tipo_usuario" placeholder="Tipo de usuario">
-        <input type="text" name="username" placeholder="Username">
-        <input type="text" name="pass" placeholder="Password">
-        <button type="submit">Subir datos</button>
-    </form> -->
+    <script src="bootstrap.bundle.js"></script>
 </body>
 
 </html>
